<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linearLayout">
    <!-- Botões -->
    <Button
        android:id="@+id/buttonNewPost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/transparent"
        android:text="@string/profile_new_post"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/buttonUpdateInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/buttonNewPost"
        android:background="@color/transparent"
        android:text="@string/profile_update_info"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/buttonActivityLog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/buttonUpdateInfo"
        android:background="@color/transparent"
        android:text="@string/profile_activity_log"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/buttonMore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_toRightOf="@+id/buttonActivityLog"
        android:background="@color/transparent"
        android:text="@string/profile_more"
        android:textAllCaps="false" />
    </LinearLayout>

    <!-- Texto -->
    <TextView
        android:id="@+id/textViewUserDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:text="@string/user_description"
        android:textAlignment="center"
        android:layout_below="@+id/linearLayout" />

    <Button
        android:id="@+id/buttonEditDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/textViewUserDescription"
        android:background="@color/transparent"
        android:textColor="@color/blueFacebook"
        android:gravity="center"
        android:text="Edit"
        android:textAllCaps="false"
        android:paddingBottom="10dp"/>
</RelativeLayout>