<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context="app.com.aula02.Aula02MainActivity">

    <ScrollView
        android:id="@+id/ScrollViewPrincipal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearBottom"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Pesquisa -->
            <include
                layout="@layout/viewgrouppesquisa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <!-- Imagem -->
            <!-- Utilizar patentbellow -->
            <ImageView
                android:id="@+id/imageViewGrande"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/oreo_fundo" />

            <!-- Imagem -->
            <ImageView
                android:id="@+id/imageViewPequena"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:layout_marginTop="-65dp"
                android:paddingTop="10dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/android_oreo" />

            <!-- Texto -->
            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_name"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textAlignment="center"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"/>

            <!-- View Group Status Bar -->
            <include
                layout="@layout/viewgroupstatusbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <!-- View Group Pessoal -->
            <include layout="@layout/viewgrouppessoal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/linearBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <!-- Botões -->
        <Button
            android:id="@+id/buttonNewPostBottom"
            android:background="@color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/profile_new_post" />

        <Button
            android:id="@+id/buttonFriends"
            android:background="@color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/profile_friends" />

        <Button
            android:id="@+id/buttonMessages"
            android:background="@color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/profile_messenger" />
    </LinearLayout>
</RelativeLayout>
